crates/k-rust/tests/snapshots/inner_rules__parses_whitespace_between_an_unquoted_prefix_label_and_parenthesis.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Float ::= r\"[0-9]+\" [token]\n  syntax Pgm ::= f32mul ( Float, Float )\n  rule f32mul ( F1, F2 ) => f32mul(F2, F1)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`f32mul(_,_)_MAIN_Pgm_Float_Float`(#SemanticCastToFloat(F1),#SemanticCastToFloat(F2))=>`f32mul(_,_)_MAIN_Pgm_Float_Float`(#SemanticCastToFloat(F2),#SemanticCastToFloat(F1))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
