crates/k-rust/tests/snapshots/inner_rules__prefer_and_avoid_after_z3.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: "sources.iter().map(|source|\n{\n    resolve_rule_bubbles(&lowered(source)).map(|definition|\n    {\n        definition.main_module().unwrap().local_sentences.iter().filter_map(sentence_summary).map(|summary|\n        summary.body).collect::<Vec<_>>()\n    })\n}).collect::<Vec<_>>()"
---
[
    Ok(
        [
            "plus(#token(\"1\",\"Int\"),times(#token(\"2\",\"Int\"),#token(\"3\",\"Int\")))=>#token(\"1\",\"Int\")",
        ],
    ),
    Ok(
        [
            "times(plus(#token(\"1\",\"Int\"),#token(\"2\",\"Int\")),#token(\"3\",\"Int\"))=>#token(\"1\",\"Int\")",
        ],
    ),
]
