crates/k-rust/tests/snapshots/inner_rules__preferred_production_selects_its_ambiguity_branch.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\nsyntax Int ::= r\"[0-9]+\" [token]\nsyntax Exp ::= Int\nsyntax Exp ::= Exp \"+\" Exp [symbol(plus), prefer]\nsyntax Exp ::= Exp \"*\" Exp [symbol(times)]\nrule 1 + 2 * 3 => 1\nendmodule"
---
[
    SentenceSummary {
        kind: "rule",
        body: "plus(#token(\"1\",\"Int\"),times(#token(\"2\",\"Int\"),#token(\"3\",\"Int\")))=>#token(\"1\",\"Int\")",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
