crates/k-rust/tests/snapshots/inner_rules__prefers_a_lifted_rewrite_over_a_nested_operator_interpretation.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Key ::= \"a\" [symbol(a)]\n  syntax Value ::= \"b\" [symbol(b)] | \"c\" [symbol(c)]\n  syntax Pair ::= Key \"|->\" Value [symbol(pair)]\n  syntax Foo ::= \"foo(\" Pair \")\" [symbol(foo)]\n  rule foo(a |-> b => a |-> c)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "foo(pair(a(.KList),b(.KList))=>pair(a(.KList),c(.KList)))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
