crates/k-rust/tests/snapshots/inner_rules__prefers_the_most_specific_generated_bracket.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax AExp ::= Int | \"(\" AExp \")\" [bracket]\n  syntax KResult ::= Int\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n               | KItem \"|->\" KItem [symbol(mapEntry)]\n  syntax KItem ::= Map\n  rule (0 |-> (_ => I:Int)) => .Map\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "mapEntry(#token(\"0\",\"Int\"),#SemanticCastToKItem(_)=>#SemanticCastToInt(I))=>dotMap(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
