crates/k-rust/tests/snapshots/inner_rules__preserves_nested_term_spans_and_resolved_productions.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= Int\n  syntax Exp ::= Exp \"+\" Exp [symbol(_+_)]\n  syntax Exp ::= \"f(\" Exp \")\" [symbol(f)]\n\n  rule f(f(1 + 2)) => f(3)\nendmodule\n"
---
[
    MetadataSummary {
        term: "f(f(`_+_`(#token(\"1\",\"Int\"),#token(\"2\",\"Int\"))))=>f(#token(\"3\",\"Int\"))",
        source: Some(
            "f(f(1 + 2)) => f(3)",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 161,
                end: 180,
            },
        ),
        production: None,
    },
    MetadataSummary {
        term: "f(f(`_+_`(#token(\"1\",\"Int\"),#token(\"2\",\"Int\"))))",
        source: Some(
            "f(f(1 + 2))",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 161,
                end: 172,
            },
        ),
        production: Some(
            "97976ce44b176b8799308b27030424c7",
        ),
    },
    MetadataSummary {
        term: "f(`_+_`(#token(\"1\",\"Int\"),#token(\"2\",\"Int\")))",
        source: Some(
            "f(1 + 2)",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 163,
                end: 171,
            },
        ),
        production: Some(
            "97976ce44b176b8799308b27030424c7",
        ),
    },
    MetadataSummary {
        term: "`_+_`(#token(\"1\",\"Int\"),#token(\"2\",\"Int\"))",
        source: Some(
            "1 + 2",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 165,
                end: 170,
            },
        ),
        production: Some(
            "8663ece228d3d9193b08159bd8cc5114",
        ),
    },
    MetadataSummary {
        term: "#token(\"1\",\"Int\")",
        source: Some(
            "1",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 165,
                end: 166,
            },
        ),
        production: Some(
            "a29c5967a3ed80dd5692576be1a9e91b",
        ),
    },
    MetadataSummary {
        term: "#token(\"2\",\"Int\")",
        source: Some(
            "2",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 169,
                end: 170,
            },
        ),
        production: Some(
            "a29c5967a3ed80dd5692576be1a9e91b",
        ),
    },
    MetadataSummary {
        term: "f(#token(\"3\",\"Int\"))",
        source: Some(
            "f(3)",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 176,
                end: 180,
            },
        ),
        production: Some(
            "97976ce44b176b8799308b27030424c7",
        ),
    },
    MetadataSummary {
        term: "#token(\"3\",\"Int\")",
        source: Some(
            "3",
        ),
        logical_source: Some(
            "nested.k",
        ),
        span: Some(
            TermSpan {
                source: SourceId(
                    0,
                ),
                start: 178,
                end: 179,
            },
        ),
        production: Some(
            "a29c5967a3ed80dd5692576be1a9e91b",
        ),
    },
]
