crates/k-rust/tests/snapshots/inner_rules__preserves_prefer_and_avoid_until_post_inference_disambiguation.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: errors
---
[
    Parse(
        RuleParseError {
            module: "MAIN",
            sentence_type: "rule",
            source: Some(
                "rules.k",
            ),
            location: Some(
                Location {
                    start_line: 6,
                    start_column: 1,
                    end_line: 6,
                    end_column: 20,
                },
            ),
            error: Ambiguous {
                parses: 2,
            },
        },
    ),
    Parse(
        RuleParseError {
            module: "MAIN",
            sentence_type: "rule",
            source: Some(
                "rules.k",
            ),
            location: Some(
                Location {
                    start_line: 6,
                    start_column: 1,
                    end_line: 6,
                    end_column: 20,
                },
            ),
            error: Ambiguous {
                parses: 2,
            },
        },
    ),
]
