crates/k-rust/tests/snapshots/inner_rules__reconstructs_implicit_user_lists_after_sort_inference.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: bodies
---
[
    "wrap(ids(#token(\"a\",\"Id\"),`.List{\"ids\"}`(.KList)))=>wrap(ids(#token(\"a\",\"Id\"),ids(#token(\"b\",\"Id\"),`.List{\"ids\"}`(.KList))))",
]
