crates/k-rust/tests/snapshots/inner_rules__rejects_an_unscoped_cast_over_a_production_ending_in_a_nonterminal.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Atom ::= r\"[a-z]\" [token]\n  syntax Other ::= Atom\n  syntax Exp ::= \"f\" Other [symbol(f)]\n  rule f a::Exp => f a\nendmodule\n"
---
Parse(
    RuleParseError {
        module: "MAIN",
        sentence_type: "rule",
        source: Some(
            "rules.k",
        ),
        location: Some(
            Location {
                start_line: 5,
                start_column: 3,
                end_line: 5,
                end_column: 23,
            },
        ),
        error: CastPriority {
            cast: "#SyntacticCast",
            child: "f",
        },
    },
)
